--- a/mcacountdown/cookiepolicy.html
+++ b/mcacountdown/cookiepolicy.html
@@ -12,7 +12,7 @@
   
   <body style="background-color:#141414; overflow-x:hidden;">
     <center style="margin: 0; position: absolute; left: 50%; -ms-transform: translate(-50%, 0%); transform: translate(-50%, 0%);">
-        <h1>Cookie & Privacy Policy</h1>
+        <h1>Cookie Policy</h1>
         <p>Countdown utilizes cookies on the options/settings menu. Cookies are small files that store preferences, passwords, or other data in a browser. In our case, we use cookies to save your preferences in the options/settings menu.</p>
         <p>Third parties, including Google, may utilize cookies through Google Ads to serve ads based on your visits to Countdown and other sites. Google's advertising cookies allow Google and their partners to serve you ads based on their visits to Countdown and other sites across the internet. You can opt-out of personalized ads by visiting <a class="aintext" href="https://www.google.com/settings/ads">Ads Settings</a> or to opt out of a third-party vendor's cookies for personalized ads, visit <a class="aintext" href="http://www.aboutads.info/choices/">www.aboutads.info</a>.</p>
 <p>Countdown may use these cookies for the options menu:</p>
