--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -43,6 +43,8 @@
 <br>
 <br>
 <a class="a2" onclick="acceptcookies()"><i class="fa-solid fa-circle-check"></i> Accept All</a>
+<a class="a2 warning" onclick="rejectcookies()"><i class="fa-solid fa-circle-xmark"></i> Reject All</a>
+
 <Br>
   <br>
   <br>
@@ -105,6 +107,12 @@
   <h1 class="wifitext" style="font-size: 20px;"><i class="fa-solid fa-circle-exclamation"></i> No Internet Connection</h1>
   </div>
   </center>
+
+  <center  id="cookiesrejected" class="hidden" style="margin: 0; position: absolute; top: 15%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+    <div class="box wifibox" style="padding-left:20px; padding-right:20px; padding-top:10px; padding-bottom:10px;">
+    <h1 class="wifitext" style="font-size: 20px;"><i class="fa-solid fa-cookie-bite"></i> Enable cookies to use the options menu and see relevant ads.</h1>
+    </div>
+    </center>
 
   <center class="hidden" id="ad_container" style="border-radius: 20px; margin: 0; position: absolute; top: 88%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
     <p class="textelement" id="maintainedtext">This AD is promoted in order to maintain the site and cannot be hidden.</p>
@@ -555,6 +563,9 @@
       document.getElementById("innergear").classList.add("hidden");
       document.getElementById("ad").classList.add("hidden");
     }
+    else{
+      document.getElementById("cookiesrejected").classList.remove("hidden");
+    }
 updateoptions();
 
 document.getElementById("body").style.overflowY = 'hidden';
@@ -854,6 +865,22 @@ function memsav(){
 }
 function acceptcookies(){
   setCookie('cookiesallowed', 'true', '70');
+  document.getElementById("cookiepopup").classList.add("hidden");
+        document.getElementById("clock").style.display = "";
+    document.getElementById("gear").classList.remove("hidden");
+    document.getElementById("innergear").classList.remove("hidden");
+
+    document.getElementById("preloader").classList.add("hidden");
+    document.getElementById("ad_container").classList.remove("hidden");
+document.getElementById("ad").classList.remove("hidden");
+    document.getElementById("unfocused").classList.add("hidden");
+
+    document.getElementById("body").style.overflowY = 'hidden';
+    document.body.scrollTop = document.documentElement.scrollTop = 0;
+}
+
+function rejectcookies(){
+  document.getElementById("cookiesrejected").classList.remove("hidden");
   document.getElementById("cookiepopup").classList.add("hidden");
         document.getElementById("clock").style.display = "";
     document.getElementById("gear").classList.remove("hidden");
