--- a/mcacountdown/Information/dependencies.html
+++ b/mcacountdown/Information/dependencies.html
@@ -19,8 +19,13 @@
         <p>We could not have made this project possible without the many talented coders across the world who help others and contribute to open source libraries. Here are the open source projects we used to make countdown a great website!</p>
         <br />
         <br />
-        <p>Confetti Falling Animation In Pure JavaScript – Confetti.js</p>
+        <p>Confetti Falling Animation In Pure JavaScript â€“ Confetti.js</p>
         <a class="aintext" href="https://www.cssscript.com/confetti-falling-animation/">Visit Site</a>
+        <br />
+        <br />
+        <br />
+        <p>BlockAdBlocm</p>
+        <a class="aintext" href="https://github.com/sitexw/BlockAdBlock">Visit Site</a>
         <br />
         <br />
         <br />
