--- a/mcacountdown/Information/dependencies.html
+++ b/mcacountdown/Information/dependencies.html
@@ -24,7 +24,7 @@
         <br />
         <br />
         <br />
-        <p>BlockAdBlocm</p>
+        <p>BlockAdBlock</p>
         <a class="aintext" href="https://github.com/sitexw/BlockAdBlock">Visit Site</a>
         <br />
         <br />
