--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -133,7 +133,7 @@
         </div>
     </center>
 
-    <center id="s" style="margin: 0; position: absolute; top: 80%; left: 50%; -ms-transform: translate(-50%, 0%); transform: translate(-50%, 0%);">
+    <center class="hidden" id="s" style="margin: 0; position: absolute; top: 80%; left: 50%; -ms-transform: translate(-50%, 0%); transform: translate(-50%, 0%);">
         <div class="box wifibox" style="padding-left:20px; padding-right:20px; padding-top:10px; padding-bottom:10px;">
             <h1 class="wifitext" style="font-size: 20px;"><i class="fa-solid fa-vial"></i> This is a beta version of Countdown. We're working on improvements and will release the full version with many new features soon.</h1>
         </div>
