--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -767,6 +767,7 @@ document.getElementById("ad").classList.remove("hidden");
 
 
     document.getElementById("body").style.overflowY = '';
+      alert("test");
     document.body.scrollTop = document.documentElement.scrollTop = 0;
   }
   else{
