--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -742,7 +742,7 @@ function settings(){
     document.getElementById("ad_container").classList.remove("hidden");
 document.getElementById("ad").classList.remove("hidden");
     document.getElementById("unfocused").classList.add("hidden");
-
+alert("1test");
     document.getElementById("body").style.overflowY = 'hidden';
     document.body.scrollTop = document.documentElement.scrollTop = 0;
   }
@@ -767,7 +767,7 @@ document.getElementById("ad").classList.remove("hidden");
 
 
     document.getElementById("body").style.overflowY = '';
-      alert("test");
+      alert("2test");
     document.body.scrollTop = document.documentElement.scrollTop = 0;
   }
   else{
@@ -783,6 +783,7 @@ document.getElementById("ad").classList.remove("hidden");
     document.getElementById("unfocused").classList.add("hidden");
 
     document.getElementById("body").style.overflowY = 'hidden';
+      alert("3test");
     document.body.scrollTop = document.documentElement.scrollTop = 0;
   }
 }
