--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -91,6 +91,7 @@
         <h2 class="textelement">
             General
         </h2>
+            <p class="textelement">General settings are currently in beta and do not support saving between sessions or reloads.</p>
         <input class="datepicker" type="datetime-local" />
         <br />
         <br />
