--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -135,7 +135,7 @@
             <p>Avoid typing in the date each time by going to this link.<br />You can’t edit the countdown for recipients once it’s sent.</p>
             <a onclick="closemodals()">Close</a>
         </dialog>
-
+            <p>Links are currently broken. This includes the ability to reload and be on the same countdown. We are working on the issue.</p>
         <input id="linkinput" class="input" />
         <br />
         <br />
