--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -135,7 +135,7 @@
             <p>Avoid typing in the date each time by going to this link.<br />You can’t edit the countdown for recipients once it’s sent.</p>
             <a onclick="closemodals()">Close</a>
         </dialog>
-        <input id="linkinput" class="input" />
+        <input id="linkinput" class="input" /> <i class="fa-regular fa-clone" onclick="copylink"></i>
         <br />
         <br />
         <div style="border-radius:20px; background:white; padding:20px; color:black; height:150px; width:350px;">
@@ -952,6 +952,10 @@ function eraseCookie(name) {
         document.getElementById("linkinput").value = "https://michaeldors.com/mcacountdown/timer.html?date=" + parameter('date');
 
 
+    }
+    
+    function copylink(){
+        navigator.clipboard.writeText(document.getElementById("linkinput").value);
     }
 
     function convert(str) {
