--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -960,7 +960,7 @@ function eraseCookie(name) {
             mnth = ("0" + (date.getMonth() + 1)).slice(-2),
             day = ("0" + date.getDate()).slice(-2);
             var daynum = parseInt(day) + 1;
-        return [date.getFullYear(), mnth, day].join("-");
+        return [date.getFullYear(), mnth, daynum].join("-");
     }
 
     function parameter(name) {
