--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -126,7 +126,7 @@
             <a onclick="closemodals()">Close</a>
         </dialog>
         <input class="datepicker" type="datetime-local" />
-        <div class="wrapper">
+        <div class="wrapper" style="max-width:90%">
             <div class="icon"><i id="left" class="fa-solid fa-angle-left"></i></div>
             <ul class="tabs-box">
                 <li class="tab active">Custom</li>
