--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -625,7 +625,7 @@
         padding: 35px;
         position: relative;
         overflow-x: hidden;
-        max-width: 1000px;
+        max-width: 90%;
         border-radius: 35px;
     }
 
