--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -1,4 +1,5 @@
 <head>
+    <head><meta name=viewport content="width=device-width, initial-scale=1"></head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One" rel="stylesheet">
@@ -622,9 +623,10 @@
         display: flex;
         padding: 35px;
         position: relative;
-        overflow-x: hidden;
         max-width: 90%;
         border-radius: 35px;
+        -webkit-overflow-scrolling: touch;
+        overflow-x: scroll;
     }
 
         .wrapper .icon {
