--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -625,8 +625,8 @@
         position: relative;
         max-width: 90%;
         border-radius: 35px;
-        -webkit-overflow-scrolling: touch;
         overflow-x: scroll;
+        overflow-x: hidden;
     }
 
         .wrapper .icon {
