--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           <h1 data-aos="fade-up">Design Pricing</h1>
       <br>
       <br>
-  <img data-aos="fade-up" style="width: 70%;" src="Images/designprice.png">  
+  <img data-aos="fade-up" style="width: 70%;" src="Images/designpricing.png">  
 <Br>
         <br>
       <br>
