--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -111,7 +111,7 @@
         </p>
         <br>
         <Br>
-        <a onclick="settings();"><i class="fa-solid fa-gear"></i> Close</a>
+        <a onclick="settings();SetCountDowngeneral();"><i class="fa-solid fa-gear"></i> Close</a>
         <a id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Reset All</a>
 
         <Br>
@@ -176,9 +176,7 @@
         <p>Keep contrast in mind when choosing colors.</p>
         <br />
         <br />
-        <a onclick="SetCountDowngeneral()"><i class="fa-solid fa-check" id="submitdate"></i> Confirm Changes</a>
-        <br>
-        <br>
+
         <h2 class="textelement">
             Ease of Use
         </h2>
