--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -18,8 +18,8 @@
     <p id="clock" class="clock"></p>
     <div class="backgroundframe" id="animatedbackground">
         <div class="backgroundframe-bg">
-            <img class="bg-color album-artwork" src="enhancedbackground.png" />
-            <img class="bg-black album-artwork" src="enhancedbackground.png" />
+            <img class="bg-color album-artwork" src="enhancedbackground_fourth.png" />
+            <img class="bg-black album-artwork" src="enhancedbackground_fourth.png" />
         </div>
     </div>
 
@@ -452,6 +452,7 @@
         min-height: 99%;
         font-family: 'Fredoka One';
         color:#ffffff;
+        /*mix-blend-mode:difference;*/
       }
       .clock{
         display: flex;
@@ -857,6 +858,8 @@
         top:5%;
         left: 7%;
       }
+
+
 
       #innergear{
         font-size:30px;
