--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -18,8 +18,8 @@
     <p id="clock" class="clock"></p>
     <div class="backgroundframe" id="animatedbackground">
         <div class="backgroundframe-bg">
-            <img class="bg-color album-artwork" src="enhancedbackground_fourth.png" />
-            <img class="bg-black album-artwork" src="enhancedbackground_fourth.png" />
+            <img class="bg-color album-artwork" src="enhancedbackground.png" />
+            <img class="bg-black album-artwork" src="enhancedbackground.png" />
         </div>
     </div>
 
